[package]
name = "mobius-rtsp"
version = "1.0.0"
edition = "2024"
authors = ["GrumpyChubbyCat lamantin-ai@yandex.ru"]

[profile.release]
lto = true
opt-level = 3
debug = true
panic = 'unwind'

[dependencies]
config = "0.15.19"
serde =  { version = "1.0.219", features = ["derive"] }
glib = "0.21.0"
gstreamer = "0.24.0"
gstreamer-rtsp-server = "0.24.1"
dotenv = "0.15.0"
rand = "0.10.0"
